Fixed layout problem with long OU names in login dialog.

--- a/webapp/workplaceThemes/VAADIN/themes/opencms/_opencms.scss
+++ b/webapp/workplaceThemes/VAADIN/themes/opencms/_opencms.scss
@@ -968,6 +968,10 @@
 			opacity: 0.6;
 		}
 	}
+	
+	#login-app-overlays #VAADIN_COMBOBOX_OPTIONLIST { 
+		position: fixed !important;
+	}
 
 	/* fixes tooltip issues */
 	.v-tooltip {
